# DockerRemote

./: .gitignore  ChangeLog  README.md  requirements.txt  setup.cfg
cli/: main.py
docker_remote/: __init__.py
docker_remote/cli/: main.py  pager.py
docker_remote/core/: __init__.py  analyser.py  repository.py
docker_remote/manager/: __init__.py  manager.py
manager/: Manager.py  __init__.py  manager.py
remote/: Analyser.py  __init__.py  analyser.py  repository.py
