[metadata]
name = docker_remote
version = 0.1.3
summary = Docker Hub remote repostiory manager
author = Marek Cermak
author-email = git.mcermak@gmail.com
license = GPL-3.0
home-page = https://github.com/CermakM/docker-remote
description-file = README.md
requires-python >= 3
classifier =
    Development Status :: 1 - Planning

    Intended Audience :: Developers

    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System

    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

    Programming Language :: Python :: 3
keywords =
    docker
    hub
    remote
    repository
    manager

[files]
packages =
    docker_remote

[entry_points]
console_scripts =
    docker-remote = docker_remote.cli.main:main
